app/assets/stylesheets/_ataglance.scss
// TODO: setup actual responsiveness for at a glance stats. This involves making the logo responsive and hiding some boxes as the view gets smaller. For now just hide for laptop size and lower.

  .at-a-glance-outer {
    margin-bottom: 15px;
    margin-top: 10px;

    .statbox-wrapper {
      padding: 5px;

      div {
        height: 134px;
        border-radius: 2px;
        background: #ffffff;

        table {
          height: 100%;
          tr {
            td {
              padding: 2px;
              font-size: 13px;
              line-height: 1;
              vertical-align: middle;
            }
            td:first-child {
              width: 80%
            }
            td:last-child {
              text-align: right;
            }
          }
        }
      }

      h6 {
        margin: -5px 0px 5px 0px;
      }
    }


  }

